--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -69,6 +69,10 @@ label.required:after {
   right: 0;
   bottom: 0;
   font-size: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 30vh;
 }
 
 #snackbar.show {
