--- a/templates/room/__waitingList.html.twig
+++ b/templates/room/__waitingList.html.twig
@@ -9,10 +9,17 @@
 
         <a class="small directSend"
            href="{{ path('accept_waitingList',{'id':w.id}) }}"
+           data-text="{{ 'Wollen Sie den Teilnehmer wirklich von dem Event löschen'|trans }}"
+           data-target="#atendeeList"
+           data-url="{{ path('denie_waitingList',{'id':w.id}) }}"
+        > <i class="fa fa-check"></i>
+        </a>
+        <a class="small directSend"
+           href="{{ path('denie_waitingList',{'id':w.id}) }}"
            data-text="{{ 'Wollen Sie den Teilnehmer wirklich zu dem Event hinzufügen'|trans }}"
            data-target="#atendeeList"
            data-url="{{ path('room_add_user',{'room':room.id}) }}"
-        > <i class="fa fa-check"></i>
+        > <i class="fa fa-trash"></i>
         </a>
         {% if w|groupFromWaitinglist is not null %}
         <ul>
