--- a/templates/share_link/subscribe.html.twig
+++ b/templates/share_link/subscribe.html.twig
@@ -141,25 +141,25 @@
                         </i></a>
                     <div class="form-group">
                         <input type="text" required class="form-control" name="group[x][firstName]"
-                               placeholder="{{ 'Vorname'|trans }}">
+                               placeholder="{{ 'Vorname'|trans }}*">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
                         <input type="text" required class="form-control" name="group[x][lastName]"
-                               placeholder="{{ 'Nachname'|trans }}">
+                               placeholder="{{ 'Nachname'|trans }}*">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
-                        <input type="email" required class="form-control" name="group[x][email]"
+                        <input type="email"  class="form-control" name="group[x][email]"
                                placeholder="{{ 'Email'|trans }}">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="form-group">
                         <input type="text" required class="form-control" name="group[x][address]"
-                               placeholder="{{ 'Adresse'|trans }}">
+                               placeholder="{{ 'Adresse'|trans }}*">
                     </div>
                 </div>
             </div>
