--- a/templates/room/__waitingList.html.twig
+++ b/templates/room/__waitingList.html.twig
@@ -11,7 +11,7 @@
            href="{{ path('accept_waitingList',{'id':w.id}) }}"
            data-text="{{ 'Wollen Sie den Teilnehmer wirklich von dem Event löschen'|trans }}"
            data-target="#atendeeList"
-           data-url="{{ path('denie_waitingList',{'id':w.id}) }}"
+           data-url="{{ path('room_add_user',{'room':room.id}) }}"
         > <i class="fa fa-check"></i>
         </a>
         <a class="small directSend"
@@ -24,7 +24,7 @@
         {% if w|groupFromWaitinglist is not null %}
         <ul>
             {% for m in w|groupFromWaitinglist.members  %}
-            <li>{{ m.email }} <a tabindex="0" data-toggle="popover" data-trigger="focus"
+            <li>{% if m.email is not null %}{{ m.email }}{% else%}{{ m.firstName }} {{ m.lastName }}{% endif%} <a tabindex="0" data-toggle="popover" data-trigger="focus"
                                 title="{{ m.firstName }} {{ m.lastName }}"
                                 data-content="
 {{ 'Email'|trans }}: <a href='mailto:{{ m.email }}'>{{ m.email }}</a><br>
