whan double entered emails in the group login then the group registration is not possible

--- a/templates/join/base.html.twig
+++ b/templates/join/base.html.twig
@@ -177,7 +177,9 @@
 
     {{ include('base/__matomoOptOut.html.twig') }}
 </div>
-
+<script>
+    var textDublicateEmail = '{{ 'Sie haben doppelte E-Mail Adressen eingetragen'|trans }}';
+</script>
 {% block webpack %}
     {{ encore_entry_script_tags('frontend') }}
 {% endblock %}
