Update Links and some remaining texts from JitsiAdmin to OEM

--- a/templates/email/base.html.twig
+++ b/templates/email/base.html.twig
@@ -87,7 +87,7 @@
         </row>
         <center>
             <small>
-                <a href="https://jitsi-admin.de">{{ 'Powered by Open Event Manager, die Open Source Event Managment Software'|trans }}</a>
+                <a href="https://app.open-event-manager.de/">{{ 'Powered by Open Event Manager, die Open Source Event Managment Software'|trans }}</a>
             </small>
         </center>
 
