invitationemail can be resend to each participant

--- a/templates/room/__attendeeList.html.twig
+++ b/templates/room/__attendeeList.html.twig
@@ -67,7 +67,9 @@
 {{ 'Email'|trans }}: <a href='mailto:{{ u.email }}'>{{ u.email }}</a><br>
                               </a>"> <i
                                         class="fa fa-info-circle"></i></a>
+                            {% if u.email is not null %}
                             <a href="{{ path('room_repeat_user',{'id':room.id,'user_id':u.id}) }}" title="{{ 'Einladungsemail erneut senden'|trans }}"><i class="far fa-share-square"></i></a>
+                            {% endif %}
                             <a class="small confirmHref"
                                             href="{{ path('room_user_remove',{'room':room.id,'user':u.id}) }}"><i
                                         class="fa fa-trash"></i> </a></li>
