add russian and turkish

--- a/templates/join/base.html.twig
+++ b/templates/join/base.html.twig
@@ -72,6 +72,10 @@
                                         src="{{ asset('/images/locale/vi.png') }}" class="iconSytle" alt="Tiếng Việt"></a>
                             <a class="dropdown-item" href="{{ path(app.request.get('_route'), app.request.get('_route_params') | merge({'_locale':'zh'})) }}"><img
                                         src="{{ asset('/images/locale/zh.png') }}" class="iconSytle" alt="中国人"></a>
+                            <a class="dropdown-item" href="{{ path(app.request.get('_route'), app.request.get('_route_params') | merge({'_locale':'tr'})) }}"><img
+                                        src="{{ asset('/images/locale/tr.png') }}" class="iconSytle" alt="Turkish"></a>
+                            <a class="dropdown-item" href="{{ path(app.request.get('_route'), app.request.get('_route_params') | merge({'_locale':'ru'})) }}"><img
+                                        src="{{ asset('/images/locale/ru.png') }}" class="iconSytle" alt="Russian"></a>
 
                         </div>
 
