--- a/templates/base/__topnav.html.twig
+++ b/templates/base/__topnav.html.twig
@@ -44,6 +44,10 @@
                             src="{{ asset('/images/locale/vi.png') }}" class="iconSytle" alt="Tiếng Việt"></a>
                 <a class="dropdown-item" href="{{ path("dashboard", {"_locale": "zh"}) }}"><img
                             src="{{ asset('/images/locale/zh.png') }}" class="iconSytle" alt="中国人"></a>
+                <a class="dropdown-item" href="{{ path("dashboard", {"_locale": "ru"}) }}"><img
+                            src="{{ asset('/images/locale/ru.png') }}" class="iconSytle" alt="Russian"></a>
+                <a class="dropdown-item" href="{{ path("dashboard", {"_locale": "tr"}) }}"><img
+                            src="{{ asset('/images/locale/tr.png') }}" class="iconSytle" alt="Turkish"></a>
 
             </div>
         </li>
