Loggs when a User is: * subscribe to an event * added tot the waitinglist * added to a group * removed from an event * group is removed * user from group is removed from event * send subsriper email * douple opt in to event

--- a/templates/email/__roomInfo.html.twig
+++ b/templates/email/__roomInfo.html.twig
@@ -20,8 +20,9 @@
 {% if room is defined and user is defined %}
     {% set members =  userFromUsergroup(user, room) %}
     {% if members|length > 0 %}
-        <b>{{ 'Angemeldete Gruppenmitglieder '|trans }}:</b>
+        <b>{{ 'Angemeldete Gruppenmitglieder'|trans }}:</b>
         <ul>
+            <li>{{ user.firstName }} {{ user.lastName }}</li>
             {% for m in members %}
                 <li>{{ m.firstName }} {{ m.lastName }}</li>
             {% endfor %}
