--- a/templates/storno/accept.html.twig
+++ b/templates/storno/accept.html.twig
@@ -11,7 +11,7 @@
 
     <div class="offset-sm-1 col-sm-10 offset-lg-2 col-lg-8 d-flex align-items-center flex-column">
             <h4 class="text-center ">
-                {% trans with {'{name}':user.firstName ~ user.lastName} %}Hallo {name}{% endtrans %}
+                {% trans with {'{name}':user.firstName ~ ' ' ~ user.lastName} %}Hallo {name}{% endtrans %}
             </h4>
             <p class="text-center">{% trans with {'{event}':room.name} %}Sie haben sich gerade erfolgreich von dem Event:<br><b>{event}</b><br>abgemeldet.{% endtrans %}</p>
         </div>
