now the moderator can choose if the event should be shown if there are no more spaces. the full romms are shown with a red dot and free rooms with a green dot **default is show the full events**

--- a/templates/dashboard/start.html.twig
+++ b/templates/dashboard/start.html.twig
@@ -23,12 +23,19 @@
 
 <script>
     events = [
-        {% for e in events %}
+        {% for eTmp in events %}
+        {% set e = eTmp.data %}
         {
             title: '{{ e.name }}',
             start: '{{ e.start|date('Y-m-d') }}T{{ e.start|date('H:i:s') }}',
             end: '{{ e.enddate|date('Y-m-d') }}T{{ e.enddate|date('H:i:s') }}',
-            url: '{{ path('public_subscribe_participant',{'uid':e.uidParticipant}) }}'
+            url: '{{ path('public_subscribe_participant',{'uid':e.uidParticipant}) }}',
+        {% if eTmp.space == true %}
+            backgroundColor: '#25a20b',
+        {% else %}
+            backgroundColor: '#ff0000',
+        {% endif %}
+
         },
         {% endfor %}
     ]
