--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -82,6 +82,9 @@
                             <div class="col-lg-12">
                                 {{ form_row(form.showRoomOnCalendar) }}
                             </div>
+                            <div class="col-lg-12 collapse" id="showInCalendarWhenNoSpace">
+                                {{ form_row(form.showInCalendarWhenNoSpace) }}
+                            </div>
 
                         </div>
                     </div>
