--- a/templates/dashboard/__roomPast.html.twig
+++ b/templates/dashboard/__roomPast.html.twig
@@ -2,18 +2,25 @@
     <div class="row">
 
         {% include 'dashboard/__roomDetails.html.twig' with {'room':room} %}
-        <div class="col-md-4">
+        <div class="col-md-3">
 
             {% if room.moderator == app.user %}
                 {{ include('dashboard/__roomOption.html.twig') }}
+
                 {% else %}
                     <a href="{{ path('room_user_remove',{'room':room.id, 'user':app.user.id}) }}"
                        class="btn btn-outline-default confirmHref">{{ 'Entfernen'|trans }}</a>
             {% endif %}
 
         </div>
-        <div class="col-md-2">
-         <p>{{ room.start|date('d.m.Y') }}</p>
+
+        <div class="col-md-3">
+            <p>
+                {% if room.moderator == app.user %}
+                <a href="{{ path('atendeelist_download_excel',{'uid':room.uid}) }}"
+                   ><i class="fa fa-print"></i></a>
+            {% endif %}
+        {{ room.start|date('d.m.Y') }}</p>
         </div>
     </div>
 </div>
