--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -10,6 +10,16 @@
         <div class="modal-body">
             {{ form_start(form) }}
             <div class="row">
+                {% if form.silentMode is defined %}
+                    <div class="col-sm-11">
+                        {{ form_row(form.silentMode) }}
+                    </div>
+                    <div class="col-sm-1">
+                        <a tabindex="0" data-toggle="popover" data-trigger="focus"
+                           data-content="{{ 'Stiller Bearbeitungsmodus. Wenn keine Veränderung der Zeit durchgeführt wird, kann über diese Option verhindert werden, dass die Teilnehmer mit einer E-Mail über die Bearbeitung des Events informiert werden.'|trans }}"><i
+                                    class="fa fa-question-circle"></i></a>
+                    </div>
+                {% endif %}
                 <div class="col-lg-12">
                     {{ form_row(form.standort) }}
                 </div>
@@ -56,7 +66,7 @@
                             </div>
                             <div class="col-sm-1">
                                 <a tabindex="0" data-toggle="popover" data-trigger="focus"
-                                   data-content="{{ 'Teilnehmer können sich selbst du dem Event anmelden.'|trans }}"><i
+                                   data-content="{{ 'Teilnehmer können sich selbst du dem Event einschreiben.'|trans }}"><i
                                             class="fa fa-question-circle"></i></a>
                             </div>
                             <div class="col-lg-12">
@@ -152,7 +162,7 @@
                             </div>
                             <div class="col-sm-1">
                                 <a tabindex="0" data-toggle="popover" data-trigger="focus"
-                                   data-content="{{ 'Dieses Event soll auf der Startseite angezeigt werden, auf wenn kein Platz mehr vorhanden ist. Dafür wird ein roter Punkt angezeigt und der Wortlaut "Ausgebucht" angehängt.'|trans }}"><i
+                                   data-content="{{ 'Dieses Event soll auf der Startseite angezeigt werden, auch wenn kein Platz mehr vorhanden ist. Dafür wird ein roter Punkt angezeigt und der Wortlaut "Ausgebucht" angehängt.'|trans }}"><i
                                             class="fa fa-question-circle"></i></a>
                             </div>
 
