--- a/templates/email/removeSchedule.html.twig
+++ b/templates/email/removeSchedule.html.twig
@@ -18,7 +18,7 @@
     <b>
         {{ 'Name'|trans }}: {{ room.name }}
     </b>
-    <p>{{ 'Moderator'|trans }}: {{ room.moderator.firstName }} {{ room.moderator.lastName }}<br>
+    <p>{{ 'Organisator'|trans }}: {{ room.moderator.firstName }} {{ room.moderator.lastName }}<br>
 
 
 {% endblock %}
