--- a/templates/email/scheduleMeeting.html.twig
+++ b/templates/email/scheduleMeeting.html.twig
@@ -23,7 +23,7 @@
         <p>{{ room.agenda|markdown_to_html }}</p>
 
     {% endif %}
-    <p>{{ 'Moderator'|trans }}: {{ room.moderator.firstName }} {{ room.moderator.lastName }}<br>
+    <p>{{ 'Organisator'|trans }}: {{ room.moderator.firstName }} {{ room.moderator.lastName }}<br>
     <spacer size="16"></spacer>
 
     <spacer size="16"></spacer>
