--- a/templates/email/removeRoom.html.twig
+++ b/templates/email/removeRoom.html.twig
@@ -18,7 +18,7 @@
     <b>
         {{ 'Name'|trans }}: {{ room.name }}
     </b>
-    <p>{{ 'Moderator'|trans }}: {{ room.moderator.firstName }} {{ room.moderator.lastName }}<br>
+    <p>{{ 'Organisator'|trans }}: {{ room.moderator.firstName }} {{ room.moderator.lastName }}<br>
         {{ 'Datum'|trans }}: {{ room.start|date('d.m.Y') }}<br>
         {{ 'Startzeit'|trans }}: {{ room.start|date('H:i') }}<br>
         {{ 'Geplante Dauer'|trans }}: {{ room.duration }} {{ 'Minuten'|trans }}</p>
